--- a/public/index.html
+++ b/public/index.html
@@ -20,23 +20,23 @@
     <meta property="og:image" content="http://localhost:1313/images/hero.png">
     <meta itemprop="name" content="Hugo Relearn Theme :: HaBox 技术支持站">
     <meta itemprop="description" content="A theme for Hugo designed for documentation.">
-    <meta itemprop="wordCount" content="1">
+    <meta itemprop="wordCount" content="19">
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
     <title>Hugo Relearn Theme :: HaBox 技术支持站</title>
     <link href="./index.xml" rel="alternate" type="application/rss+xml" title="Hugo Relearn Theme :: HaBox 技术支持站">
     <link href="./index.print.html" rel="alternate" type="text/html" title="Hugo Relearn Theme :: HaBox 技术支持站"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725523036" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1725523036" rel="stylesheet">
-    <link href="./css/auto-complete.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725523036" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1725523036" rel="stylesheet">
-    <link href="./css/fonts.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725523036" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1725523036" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1725523036" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1725523036" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1725523036" rel="stylesheet">
-    <link href="./css/print.css?1725523036" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1725523036"></script>
+    <link href="./css/fontawesome-all.min.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725546434" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1725546434" rel="stylesheet">
+    <link href="./css/auto-complete.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725546434" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1725546434" rel="stylesheet">
+    <link href="./css/fonts.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725546434" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1725546434" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1725546434" rel="stylesheet">
+    <link href="./css/print.css?1725546434" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1725546434"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -108,12 +108,59 @@
 <h1 id="hugo-relearn-theme">Hugo Relearn Theme</h1>
 
 <p>欢迎来到HaBox技术支持站</p>
+<ul>
+<li>安装维护
+<ul>
+<li><a href="https://www.ha-box.xyz/installation/instructions/index.html" rel="external" target="_self"> HA盒子使用说明书（开箱即用）</a></li>
+<li><a href="https://www.ha-box.xyz/installation/wifi/index.html" rel="external" target="_self"> 给HA Box插上无线WIFI的翅膀</a></li>
+<li><a href="https://www.ha-box.xyz/installation/hacs/index.html" rel="external" target="_self">HACS安装激活</a></li>
+</ul>
+</li>
+<li>设备接入
+<ul>
+<li><a href="https://www.ha-box.xyz/access/homekit/index.html" rel="external" target="_self">HA Box桥接米家设备到HomeKit</a></li>
+<li><a href="https://www.ha-box.xyz/access/mijia/index.html" rel="external" target="_self">将米家设备接入HomeAssistant</a></li>
+</ul>
+</li>
+<li>网络技术
+<ul>
+<li><a href="https://www.ha-box.xyz/network/habox-over-greatwall/index.html" rel="external" target="_self">Ha盒子配置科学上网</a></li>
+<li><a href="https://www.ha-box.xyz/network/linux-partition/index.html" rel="external" target="_self">linux下无损扩容分区方法</a></li>
+<li><a href="https://www.ha-box.xyz/network/docker-pull/index.html" rel="external" target="_self">从 Docker Hub 快速拉取镜像</a></li>
+<li><a href="https://www.ha-box.xyz/network/free-vless-node/index.html" rel="external" target="_self">搭建免费科学上网节点</a></li>
+<li><a href="https://www.ha-box.xyz/network/free-remote-control/index.html" rel="external" target="_self">远程控制Homeassistant盒子</a></li>
+</ul>
+</li>
+</ul>
 
             <footer class="footline">
             </footer>
           </article>
         </div>
-      </main>
+      </main><script
+  id="utteranc"
+  src="https://utteranc.es/client.js"
+  repo="cntv-chat/ha-box"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async
+></script>
+<script>
+  document.getElementById("theme-toggle").addEventListener("click", () => {
+    const theme = document.body.className.includes("dark")
+      ? "github-light"
+      : "photon-dark";
+    const message = {
+      type: "set-theme",
+      theme: theme,
+    };
+    const utteranc = document.querySelector(".utterances-frame");
+    utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+  });
+</script>
+
+
     </div>
     <aside id="R-sidebar" class="default-animation showVisitedLinks">
       <div id="R-header-topbar" class="default-animation"></div>
@@ -179,13 +226,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="./js/auto-complete.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.min.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.stemmer.support.min.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.multi.min.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.en.min.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.zh.min.js?1725523036" defer></script>
-        <script src="./js/search.js?1725523036" defer></script>
+        <script src="./js/auto-complete.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.min.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.stemmer.support.min.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.multi.min.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.en.min.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.zh.min.js?1725546434" defer></script>
+        <script src="./js/search.js?1725546434" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -271,8 +318,8 @@
       </div>
     </aside>
 
-    <script src="./js/clipboard.min.js?1725523036" defer></script>
-    <script src="./js/perfect-scrollbar.min.js?1725523036" defer></script>
-    <script src="./js/theme.js?1725523036" defer></script>
+    <script src="./js/clipboard.min.js?1725546434" defer></script>
+    <script src="./js/perfect-scrollbar.min.js?1725546434" defer></script>
+    <script src="./js/theme.js?1725546434" defer></script>
   </body>
 </html>
