--- a/public/installation/instructions/index.html
+++ b/public/installation/instructions/index.html
@@ -31,17 +31,17 @@
     <link href="../../installation/instructions/index.xml" rel="alternate" type="application/rss+xml" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站">
     <link href="../../installation/instructions/index.print.html" rel="alternate" type="text/html" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725516187" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725516187" rel="stylesheet">
-    <link href="../../css/fonts.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725516187" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725516187" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725516187" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725516187" rel="stylesheet">
-    <link href="../../css/print.css?1725516187" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725516187"></script>
+    <link href="../../css/fontawesome-all.min.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725546434" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725546434" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725546434" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725546434" rel="stylesheet">
+    <link href="../../css/fonts.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725546434" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725546434" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725546434" rel="stylesheet">
+    <link href="../../css/print.css?1725546434" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725546434"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -138,38 +138,38 @@
 <p>首先，感谢您选择由“HABox智能家居盒子”提供的Home assistant智能家居盒子，下面请与我一起进入这个神秘的小盒子一探究竟。</p>
 <h2 id="等待欢迎界面">等待欢迎界面</h2>
 <p>拿到盒子后，连上网线，插上电源，开机……启动并加载完成，大概要等待2分半种。然后在浏览器地址栏输入<a href="http://homeassistant.local:8123/" rel="external" target="_self">http://homeassistant.local:8123</a> 进行访问，不出所料，您将看到如下欢迎界面。（你也可以在路由器后台查看具体ip地址，然后输入<a href="http://ip:8123/" rel="external" target="_self">http://ip:8123</a>进行访问）</p>
-<p><a href="#R-image-de7aa0d5786b601bbe680458bdb9e2d4" class="lightbox-link"><img alt="202406190942917" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-de7aa0d5786b601bbe680458bdb9e2d4"><img alt="202406190942917" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png"></a></p>
+<p><a href="#R-image-4cb59cd5658027000c2d67b467e05223" class="lightbox-link"><img alt="202406190942917" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4cb59cd5658027000c2d67b467e05223"><img alt="202406190942917" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png"></a></p>
 <h2 id="基本设置">基本设置</h2>
 <h3 id="创建用户">创建用户</h3>
-<p><a href="#R-image-1f8ceb32a0466f4ebfcb864f52df9dff" class="lightbox-link"><img alt="202406211526015" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1f8ceb32a0466f4ebfcb864f52df9dff"><img alt="202406211526015" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png"></a></p>
+<p><a href="#R-image-d96951c75dcae37b99237c16a8097aec" class="lightbox-link"><img alt="202406211526015" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d96951c75dcae37b99237c16a8097aec"><img alt="202406211526015" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png"></a></p>
 <h3 id="选择家的位置">选择家的位置</h3>
 <p>这个地方如果搜索不到，您可以通过缩放地图，拖动地图中的位置图标到家所在的位置，然后是设置国家选项（如果是通过搜索找到的位置，就没有这个选项，系统自动设置了）</p>
-<p><a href="#R-image-c761f005e86382b0619e8265cca8b8c1" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c761f005e86382b0619e8265cca8b8c1"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png"></a></p>
-<p><a href="#R-image-f2a8ecb36ca39d6b679fd0b4b19e194d" class="lightbox-link"><img alt="202406211633570" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f2a8ecb36ca39d6b679fd0b4b19e194d"><img alt="202406211633570" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png"></a></p>
+<p><a href="#R-image-3fa7e033b5abebc48a0d2b5cf44dace3" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3fa7e033b5abebc48a0d2b5cf44dace3"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png"></a></p>
+<p><a href="#R-image-259f45a212cd3bca8f232674792761ea" class="lightbox-link"><img alt="202406211633570" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-259f45a212cd3bca8f232674792761ea"><img alt="202406211633570" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png"></a></p>
 <h3 id="信息收集">信息收集</h3>
 <p>接下来是收集数据，建议不选，然后是自动发现家里的智能设备，直接点完成即可。</p>
-<p><a href="#R-image-aff981d17d36e9415b2148a78600bd0f" class="lightbox-link"><img alt="202406211635332" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-aff981d17d36e9415b2148a78600bd0f"><img alt="202406211635332" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png"></a></p>
-<p><a href="#R-image-86c2dc9964de96579a000931ab4e5aa0" class="lightbox-link"><img alt="202406211635546" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-86c2dc9964de96579a000931ab4e5aa0"><img alt="202406211635546" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png"></a></p>
+<p><a href="#R-image-51c3d39a20fbeebc1132a4b5f0524ad5" class="lightbox-link"><img alt="202406211635332" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-51c3d39a20fbeebc1132a4b5f0524ad5"><img alt="202406211635332" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png"></a></p>
+<p><a href="#R-image-3e16dd2cc38c6756e9c16774f07e6cc6" class="lightbox-link"><img alt="202406211635546" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3e16dd2cc38c6756e9c16774f07e6cc6"><img alt="202406211635546" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png"></a></p>
 <h3 id="正式进入后台">正式进入后台</h3>
-<p><a href="#R-image-8a0d39ac6174ba183f69b076992a5f88" class="lightbox-link"><img alt="202406211637388" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8a0d39ac6174ba183f69b076992a5f88"><img alt="202406211637388" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png"></a></p>
+<p><a href="#R-image-5c3a537da6ec18a96c7dd4c85eb16e1c" class="lightbox-link"><img alt="202406211637388" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5c3a537da6ec18a96c7dd4c85eb16e1c"><img alt="202406211637388" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png"></a></p>
 <h3 id="升级和修复">升级和修复</h3>
 <p>您可能会发现左侧配置选项边上有如上图所示的数字提示，点进去</p>
 <p>该升级升级，该修复修复</p>
-<p><a href="#R-image-46952dadfb50bbd0b5dbbdd7d3ad9c41" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-46952dadfb50bbd0b5dbbdd7d3ad9c41"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png"></a></p>
-<p><a href="#R-image-6f2801624504bd6b862141e34f4f03d1" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6f2801624504bd6b862141e34f4f03d1"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png"></a></p>
-<p><a href="#R-image-1cb2f5074fac30a019e259a9beb7f452" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1cb2f5074fac30a019e259a9beb7f452"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png"></a></p>
-<p><a href="#R-image-0ff49c942c84d4dc601c7ca1908d35e7" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0ff49c942c84d4dc601c7ca1908d35e7"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png"></a></p>
+<p><a href="#R-image-f9ae6b824eae5d1afc03ad74d491a329" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f9ae6b824eae5d1afc03ad74d491a329"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png"></a></p>
+<p><a href="#R-image-bd88d55c13a47f5809c6de7969f68760" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-bd88d55c13a47f5809c6de7969f68760"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png"></a></p>
+<p><a href="#R-image-3bb8b0be78d64bf7f87bf492d1ddb5da" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3bb8b0be78d64bf7f87bf492d1ddb5da"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png"></a></p>
+<p><a href="#R-image-6380d493ed991c49a108f464c84fe359" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6380d493ed991c49a108f464c84fe359"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png"></a></p>
 <h3 id="结束语">结束语</h3>
 <p>到此，您基本上就可以根据自身情况进行设备的接入和控制了，请持续关注我们，我们将持续发布使用HomeAssistant盒子相关的使用说明！</p>
 
@@ -177,7 +177,30 @@
             </footer>
           </article>
         </div>
-      </main>
+      </main><script
+  id="utteranc"
+  src="https://utteranc.es/client.js"
+  repo="cntv-chat/ha-box"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async
+></script>
+<script>
+  document.getElementById("theme-toggle").addEventListener("click", () => {
+    const theme = document.body.className.includes("dark")
+      ? "github-light"
+      : "photon-dark";
+    const message = {
+      type: "set-theme",
+      theme: theme,
+    };
+    const utteranc = document.querySelector(".utterances-frame");
+    utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+  });
+</script>
+
+
     </div>
     <aside id="R-sidebar" class="default-animation showVisitedLinks">
       <div id="R-header-topbar" class="default-animation"></div>
@@ -243,13 +266,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725516187" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725516187" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725516187" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725516187" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725516187" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725516187" defer></script>
-        <script src="../../js/search.js?1725516187" defer></script>
+        <script src="../../js/auto-complete.js?1725546434" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725546434" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725546434" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725546434" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725546434" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725546434" defer></script>
+        <script src="../../js/search.js?1725546434" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -335,8 +358,8 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725516187" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725516187" defer></script>
-    <script src="../../js/theme.js?1725516187" defer></script>
+    <script src="../../js/clipboard.min.js?1725546434" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725546434" defer></script>
+    <script src="../../js/theme.js?1725546434" defer></script>
   </body>
 </html>
