--- a/public/network/index.html
+++ b/public/network/index.html
@@ -26,17 +26,17 @@
     <link href="../network/index.xml" rel="alternate" type="application/rss+xml" title="网络技术 :: HaBox 技术支持站">
     <link href="../network/index.print.html" rel="alternate" type="text/html" title="网络技术 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725516187" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725516187" rel="stylesheet">
-    <link href="../css/fonts.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725516187" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725516187" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725516187" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725516187" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725516187" rel="stylesheet">
-    <link href="../css/print.css?1725516187" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1725516187"></script>
+    <link href="../css/fontawesome-all.min.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725546434" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1725546434" rel="stylesheet">
+    <link href="../css/auto-complete.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725546434" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1725546434" rel="stylesheet">
+    <link href="../css/fonts.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725546434" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1725546434" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1725546434" rel="stylesheet">
+    <link href="../css/print.css?1725546434" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1725546434"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -115,7 +115,30 @@
             </footer>
           </article>
         </div>
-      </main>
+      </main><script
+  id="utteranc"
+  src="https://utteranc.es/client.js"
+  repo="cntv-chat/ha-box"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async
+></script>
+<script>
+  document.getElementById("theme-toggle").addEventListener("click", () => {
+    const theme = document.body.className.includes("dark")
+      ? "github-light"
+      : "photon-dark";
+    const message = {
+      type: "set-theme",
+      theme: theme,
+    };
+    const utteranc = document.querySelector(".utterances-frame");
+    utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+  });
+</script>
+
+
     </div>
     <aside id="R-sidebar" class="default-animation showVisitedLinks">
       <div id="R-header-topbar" class="default-animation"></div>
@@ -181,13 +204,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1725516187" defer></script>
-        <script src="../js/lunr/lunr.min.js?1725516187" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1725516187" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1725516187" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1725516187" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1725516187" defer></script>
-        <script src="../js/search.js?1725516187" defer></script>
+        <script src="../js/auto-complete.js?1725546434" defer></script>
+        <script src="../js/lunr/lunr.min.js?1725546434" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1725546434" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1725546434" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1725546434" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1725546434" defer></script>
+        <script src="../js/search.js?1725546434" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -273,8 +296,8 @@
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1725516187" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725516187" defer></script>
-    <script src="../js/theme.js?1725516187" defer></script>
+    <script src="../js/clipboard.min.js?1725546434" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1725546434" defer></script>
+    <script src="../js/theme.js?1725546434" defer></script>
   </body>
 </html>
