--- a/public/search.html
+++ b/public/search.html
@@ -20,22 +20,22 @@
     <meta property="og:image" content="http://localhost:1313/images/hero.png">
     <meta itemprop="name" content="搜索 :: HaBox 技术支持站">
     <meta itemprop="description" content="A theme for Hugo designed for documentation.">
-    <meta itemprop="wordCount" content="1">
+    <meta itemprop="wordCount" content="19">
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
     <title>搜索 :: HaBox 技术支持站</title>
     <link href="http://localhost:1313/search.html" rel="canonical" type="text/html" title="搜索 :: HaBox 技术支持站"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725523036" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1725523036" rel="stylesheet">
-    <link href="./css/auto-complete.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725523036" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1725523036" rel="stylesheet">
-    <link href="./css/fonts.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725523036" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1725523036" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1725523036" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1725523036" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1725523036" rel="stylesheet">
-    <link href="./css/print.css?1725523036" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1725523036"></script>
+    <link href="./css/fontawesome-all.min.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725546434" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1725546434" rel="stylesheet">
+    <link href="./css/auto-complete.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725546434" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1725546434" rel="stylesheet">
+    <link href="./css/fonts.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725546434" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1725546434" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1725546434" rel="stylesheet">
+    <link href="./css/print.css?1725546434" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1725546434"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -105,7 +105,30 @@
             </footer>
           </article>
         </div>
-      </main>
+      </main><script
+  id="utteranc"
+  src="https://utteranc.es/client.js"
+  repo="cntv-chat/ha-box"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async
+></script>
+<script>
+  document.getElementById("theme-toggle").addEventListener("click", () => {
+    const theme = document.body.className.includes("dark")
+      ? "github-light"
+      : "photon-dark";
+    const message = {
+      type: "set-theme",
+      theme: theme,
+    };
+    const utteranc = document.querySelector(".utterances-frame");
+    utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+  });
+</script>
+
+
     </div>
     <aside id="R-sidebar" class="default-animation showVisitedLinks">
       <div id="R-header-topbar" class="default-animation"></div>
@@ -171,13 +194,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="./js/auto-complete.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.min.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.stemmer.support.min.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.multi.min.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.en.min.js?1725523036" defer></script>
-        <script src="./js/lunr/lunr.zh.min.js?1725523036" defer></script>
-        <script src="./js/search.js?1725523036" defer></script>
+        <script src="./js/auto-complete.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.min.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.stemmer.support.min.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.multi.min.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.en.min.js?1725546434" defer></script>
+        <script src="./js/lunr/lunr.zh.min.js?1725546434" defer></script>
+        <script src="./js/search.js?1725546434" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -263,8 +286,8 @@
       </div>
     </aside>
 
-    <script src="./js/clipboard.min.js?1725523036" defer></script>
-    <script src="./js/perfect-scrollbar.min.js?1725523036" defer></script>
-    <script src="./js/theme.js?1725523036" defer></script>
+    <script src="./js/clipboard.min.js?1725546434" defer></script>
+    <script src="./js/perfect-scrollbar.min.js?1725546434" defer></script>
+    <script src="./js/theme.js?1725546434" defer></script>
   </body>
 </html>
